Adding some flask stuff

--- a/flask-stuff/templates/index.html
+++ b/flask-stuff/templates/index.html
@@ -124,6 +124,21 @@
 
           <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
 
+	Money spent on gas:
+	<br>	
+
+	Amount of CO2 released into the atmosphere:
+	{{ CO2Output }}	
+	<br>	
+	How much saved if we switch to EV:
+	<br>	
+
+	Total amount of coins earned: 
+	<br>	
+
+
+
+	<br><br><br><br>
           <h2>Section title</h2>
           <div class="table-responsive">
             <table class="table table-striped table-sm">
