Adding more flask stuff

--- a/flask-stuff/templates/index.html
+++ b/flask-stuff/templates/index.html
@@ -124,6 +124,8 @@
 
           <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
 
+	<h1>Welcome, {{ username }}</h1>
+
 	Money spent on gas:
 	${{ gasCost }}
 	<br>	
@@ -155,6 +157,9 @@
 
 
 	<br><br><br><br>
+
+
+        <!--
           <h2>Section title</h2>
           <div class="table-responsive">
             <table class="table table-striped table-sm">
@@ -286,7 +291,7 @@
         </main>
       </div>
     </div>
-
+    -->
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
