Adding some referal functions

--- a/flask-stuff/templates/index.html
+++ b/flask-stuff/templates/index.html
@@ -151,6 +151,9 @@
 
 	<br><br>
 	Referal Code: <br>
+	http://localhost:5000/referal?code={{ userId}}
+	<br><br>
+
 	http://harvarddrive.com/referal?code={{ userId}}
 
 
