Adding some stuff

--- a/flask-stuff/templates/home.html
+++ b/flask-stuff/templates/home.html
@@ -160,9 +160,8 @@
 
 
 	<br><br><br><br>
-	Pending milage:<br>
-	New Haven, CT 06520 to Cambridge, MA 02138
-	<a href="./home"><button style="width:100%;" type="button" class="btn btn-primary">Update</button></a>
+	
+	<a href="./home"><button style="width:100%;" type="button" class="btn btn-primary" disabled>Update</button></a>
 	<br>
 	<br>
         <!--
