--- a/flask-stuff/templates/testIndex logged in.html
+++ b/flask-stuff/templates/testIndex logged in.html
@@ -36,19 +36,7 @@
         <nav class="col-md-2 d-none d-md-block bg-light sidebar">
           <div class="sidebar-sticky">
             <ul class="nav flex-column">
-              <li class="nav-item">
-                <a class="nav-link active" href="C:\Kasey\Harvard\git\HackHarvard-2018\flask-stuff\templates\signinpage.html">
-                  <span data-feather="home"></span>
-                  Sign In
-                </a>
-              </li>
 
-              <li class="nav-item">
-                <a class="nav-link" href="C:\Kasey\Harvard\git\HackHarvard-2018\flask-stuff\templates\signuppage.html">
-                  <span data-feather="file"></span>
-                  Sign Up
-                </a>
-              </li>
               <li class="nav-item">
                 <a class="nav-link" href="C:\Kasey\Harvard\git\HackHarvard-2018\flask-stuff\templates\referralpage.html">
                   <span data-feather="shopping-cart"></span>
@@ -82,8 +70,8 @@ on gas should switch to electric vehicles (EV). We host databases on the cloud a
             <table class="table table-striped table-sm">
               <thead>
                 <tr>
-                  <th>#</th>
-                  <th>Header</th>
+                  <th>ID</th>
+                  <th></th>
                   <th>Header</th>
                   <th>Header</th>
                   <th>Header</th>
@@ -232,6 +220,7 @@ on gas should switch to electric vehicles (EV). We host databases on the cloud a
         data: {
           labels: ["1 Week", "2 Weeks", "3 Weeks", "4 Weeks"],
           datasets: [{
+            label: 'Total gas spent on a weekly basis',
             data: [125, 250, 375, 500],
             lineTension: 0,
             backgroundColor: 'transparent',
